Compiler_StudentID_HW2/y.output
Terminals unused in grammar

    LBRACK
    RBRACK


Grammar

    0 $accept: Program $end

    1 Program: GlobalStatementList

    2 GlobalStatementList: GlobalStatementList GlobalStatement
    3                    | GlobalStatement

    4 GlobalStatement: PackageStmt NEWLINE
    5                | FunctionDeclStmt
    6                | NEWLINE

    7 PackageStmt: PACKAGE IDENT

    8 $@1: %empty

    9 $@2: %empty

   10 FunctionDeclStmt: FuncOpen LPAREN ParameterList RPAREN Type LBRACE $@1 StatementList $@2 RBRACE

   11 $@3: %empty

   12 $@4: %empty

   13 FunctionDeclStmt: FuncOpen LPAREN ParameterList RPAREN LBRACE $@3 StatementList $@4 RBRACE

   14 $@5: %empty

   15 $@6: %empty

   16 FunctionDeclStmt: FuncOpen LPAREN RPAREN Type LBRACE $@5 StatementList $@6 RBRACE

   17 $@7: %empty

   18 $@8: %empty

   19 FunctionDeclStmt: FuncOpen LPAREN RPAREN LBRACE $@7 StatementList $@8 RBRACE

   20 FuncOpen: FUNC IDENT

   21 ParameterList: IDENT Type
   22              | IDENT
   23              | ParameterList COMMA IDENT Type
   24              | ParameterList COMMA Literal

   25 ReturnStmt: RETURN Expression
   26           | RETURN

   27 PrimaryExpr: Operand
   28            | ConversionExpr

   29 Expression: UnaryExpr
   30           | Multiplication

   31 Multiplication: Expression MUL Expression
   32               | Expression QUO Expression
   33               | Expression REM Expression
   34               | Addition

   35 Addition: Expression ADD Expression
   36         | Expression SUB Expression
   37         | Comparison

   38 Comparison: Expression EQL Expression
   39           | Expression NEQ Expression
   40           | Expression LSS Expression
   41           | Expression LEQ Expression
   42           | Expression GTR Expression
   43           | Expression GEQ Expression
   44           | Logicand

   45 Logicand: Expression LAND Expression
   46         | Logicor

   47 Logicor: Expression LOR Expression

   48 UnaryExpr: PrimaryExpr
   49          | ADD UnaryExpr
   50          | SUB UnaryExpr
   51          | NOT UnaryExpr

   52 Operand: Literal
   53        | IDENT
   54        | LPAREN Expression RPAREN
   55        | IDENT LPAREN RPAREN
   56        | IDENT LPAREN ParameterList RPAREN

   57 Literal: INT_LIT
   58        | FLOAT_LIT
   59        | BOOL_LIT
   60        | STRING_LIT

   61 ConversionExpr: Type LPAREN Expression RPAREN

   62 Type: INT
   63     | FLOAT
   64     | STRING
   65     | BOOL

   66 Statement: DeclarationStmt NEWLINE
   67          | SimpleStmt NEWLINE
   68          | Block
   69          | IfStmt
   70          | ForStmt
   71          | SwitchStmt
   72          | CaseStmt
   73          | PrintStmt NEWLINE
   74          | ReturnStmt NEWLINE
   75          | NEWLINE

   76 SimpleStmt: AssignmentStmt
   77           | ExpressionStmt
   78           | IncDecStmt

   79 DeclarationStmt: VAR IDENT Type
   80                | VAR IDENT Type ASSIGN Expression

   81 AssignmentStmt: Expression ASSIGN Expression
   82               | Expression ADD_ASSIGN Expression
   83               | Expression SUB_ASSIGN Expression
   84               | Expression MUL_ASSIGN Expression
   85               | Expression QUO_ASSIGN Expression
   86               | Expression REM_ASSIGN Expression

   87 ExpressionStmt: Expression

   88 IncDecStmt: Expression INC
   89           | Expression DEC

   90 $@9: %empty

   91 $@10: %empty

   92 Block: LBRACE $@9 StatementList $@10 RBRACE

   93 StatementList: Statement StatementList
   94              | Statement

   95 IfStmt: IF Condition Block ELSE IfStmt
   96       | IF Condition Block ELSE Block
   97       | IF Condition Block

   98 Condition: Expression

   99 ForStmt: FOR Condition Block
  100        | FOR ForClause Block

  101 ForClause: InitStmt SEMICOLON Condition SEMICOLON PostStmt

  102 InitStmt: SimpleStmt

  103 PostStmt: SimpleStmt

  104 SwitchStmt: SWITCH Expression Block

  105 $@11: %empty

  106 CaseStmt: CASE INT_LIT $@11 COLON Block
  107         | DEFAULT COLON Block

  108 PrintStmt: PRINT LPAREN Expression RPAREN
  109          | PRINTLN LPAREN Expression RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    VAR (258) 79 80
    NEWLINE (259) 4 6 66 67 73 74 75
    PACKAGE (260) 7
    INT (261) 62
    FLOAT (262) 63
    BOOL (263) 65
    STRING (264) 64
    ASSIGN (265) 80 81
    ADD_ASSIGN (266) 82
    SUB_ASSIGN (267) 83
    MUL_ASSIGN (268) 84
    QUO_ASSIGN (269) 85
    REM_ASSIGN (270) 86
    IF (271) 95 96 97
    ELSE (272) 95 96
    FOR (273) 99 100
    SWITCH (274) 104
    CASE (275) 106
    DEFAULT (276) 107
    SEMICOLON (277) 101
    COMMA (278) 23 24
    COLON (279) 106 107
    PRINT (280) 108
    PRINTLN (281) 109
    RETURN (282) 25 26
    FUNC (283) 20
    LPAREN (284) 10 13 16 19 54 55 56 61 108 109
    RPAREN (285) 10 13 16 19 54 55 56 61 108 109
    LBRACE (286) 10 13 16 19 92
    RBRACE (287) 10 13 16 19 92
    LBRACK (288)
    RBRACK (289)
    LOR (290) 47
    LAND (291) 45
    GTR (292) 42
    LSS (293) 40
    GEQ (294) 43
    LEQ (295) 41
    EQL (296) 38
    NEQ (297) 39
    ADD (298) 35 49
    SUB (299) 36 50
    MUL (300) 31
    QUO (301) 32
    REM (302) 33
    INC (303) 88
    DEC (304) 89
    NOT (305) 51
    INT_LIT <i_val> (306) 57 106
    FLOAT_LIT <f_val> (307) 58
    BOOL_LIT <b_val> (308) 59
    STRING_LIT <s_val> (309) 60
    IDENT <s_val> (310) 7 20 21 22 23 53 55 56 79 80


Nonterminals, with rules where they appear

    $accept (56)
        on left: 0
    Program (57)
        on left: 1
        on right: 0
    GlobalStatementList (58)
        on left: 2 3
        on right: 1 2
    GlobalStatement (59)
        on left: 4 5 6
        on right: 2 3
    PackageStmt <s_val> (60)
        on left: 7
        on right: 4
    FunctionDeclStmt <s_val> (61)
        on left: 10 13 16 19
        on right: 5
    $@1 (62)
        on left: 8
        on right: 10
    $@2 (63)
        on left: 9
        on right: 10
    $@3 (64)
        on left: 11
        on right: 13
    $@4 (65)
        on left: 12
        on right: 13
    $@5 (66)
        on left: 14
        on right: 16
    $@6 (67)
        on left: 15
        on right: 16
    $@7 (68)
        on left: 17
        on right: 19
    $@8 (69)
        on left: 18
        on right: 19
    FuncOpen <s_val> (70)
        on left: 20
        on right: 10 13 16 19
    ParameterList (71)
        on left: 21 22 23 24
        on right: 10 13 23 24 56
    ReturnStmt (72)
        on left: 25 26
        on right: 74
    PrimaryExpr <s_val> (73)
        on left: 27 28
        on right: 48
    Expression <s_val> (74)
        on left: 29 30
        on right: 25 31 32 33 35 36 38 39 40 41 42 43 45 47 54 61 80 81 82 83 84 85 86 87 88 89 98 104 108 109
    Multiplication <s_val> (75)
        on left: 31 32 33 34
        on right: 30
    Addition <s_val> (76)
        on left: 35 36 37
        on right: 34
    Comparison <s_val> (77)
        on left: 38 39 40 41 42 43 44
        on right: 37
    Logicand <s_val> (78)
        on left: 45 46
        on right: 44
    Logicor <s_val> (79)
        on left: 47
        on right: 46
    UnaryExpr <s_val> (80)
        on left: 48 49 50 51
        on right: 29 49 50 51
    Operand <s_val> (81)
        on left: 52 53 54 55 56
        on right: 27
    Literal <s_val> (82)
        on left: 57 58 59 60
        on right: 24 52
    ConversionExpr <s_val> (83)
        on left: 61
        on right: 28
    Type <s_val> (84)
        on left: 62 63 64 65
        on right: 10 16 21 23 61 79 80
    Statement (85)
        on left: 66 67 68 69 70 71 72 73 74 75
        on right: 93 94
    SimpleStmt (86)
        on left: 76 77 78
        on right: 67 102 103
    DeclarationStmt <s_val> (87)
        on left: 79 80
        on right: 66
    AssignmentStmt (88)
        on left: 81 82 83 84 85 86
        on right: 76
    ExpressionStmt (89)
        on left: 87
        on right: 77
    IncDecStmt (90)
        on left: 88 89
        on right: 78
    Block (91)
        on left: 92
        on right: 68 95 96 97 99 100 104 106 107
    $@9 (92)
        on left: 90
        on right: 92
    $@10 (93)
        on left: 91
        on right: 92
    StatementList (94)
        on left: 93 94
        on right: 10 13 16 19 92 93
    IfStmt (95)
        on left: 95 96 97
        on right: 69 95
    Condition (96)
        on left: 98
        on right: 95 96 97 99 101
    ForStmt (97)
        on left: 99 100
        on right: 70
    ForClause (98)
        on left: 101
        on right: 100
    InitStmt (99)
        on left: 102
        on right: 101
    PostStmt (100)
        on left: 103
        on right: 101
    SwitchStmt (101)
        on left: 104
        on right: 71
    CaseStmt (102)
        on left: 106 107
        on right: 72
    $@11 (103)
        on left: 105
        on right: 106
    PrintStmt <s_val> (104)
        on left: 108 109
        on right: 73


State 0

    0 $accept: . Program $end

    NEWLINE  shift, and go to state 1
    PACKAGE  shift, and go to state 2
    FUNC     shift, and go to state 3

    Program              go to state 4
    GlobalStatementList  go to state 5
    GlobalStatement      go to state 6
    PackageStmt          go to state 7
    FunctionDeclStmt     go to state 8
    FuncOpen             go to state 9


State 1

    6 GlobalStatement: NEWLINE .

    $default  reduce using rule 6 (GlobalStatement)


State 2

    7 PackageStmt: PACKAGE . IDENT

    IDENT  shift, and go to state 10


State 3

   20 FuncOpen: FUNC . IDENT

    IDENT  shift, and go to state 11


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 5

    1 Program: GlobalStatementList .
    2 GlobalStatementList: GlobalStatementList . GlobalStatement

    NEWLINE  shift, and go to state 1
    PACKAGE  shift, and go to state 2
    FUNC     shift, and go to state 3

    $default  reduce using rule 1 (Program)

    GlobalStatement   go to state 13
    PackageStmt       go to state 7
    FunctionDeclStmt  go to state 8
    FuncOpen          go to state 9


State 6

    3 GlobalStatementList: GlobalStatement .

    $default  reduce using rule 3 (GlobalStatementList)


State 7

    4 GlobalStatement: PackageStmt . NEWLINE

    NEWLINE  shift, and go to state 14


State 8

    5 GlobalStatement: FunctionDeclStmt .

    $default  reduce using rule 5 (GlobalStatement)


State 9

   10 FunctionDeclStmt: FuncOpen . LPAREN ParameterList RPAREN Type LBRACE $@1 StatementList $@2 RBRACE
   13                 | FuncOpen . LPAREN ParameterList RPAREN LBRACE $@3 StatementList $@4 RBRACE
   16                 | FuncOpen . LPAREN RPAREN Type LBRACE $@5 StatementList $@6 RBRACE
   19                 | FuncOpen . LPAREN RPAREN LBRACE $@7 StatementList $@8 RBRACE

    LPAREN  shift, and go to state 15


State 10

    7 PackageStmt: PACKAGE IDENT .

    $default  reduce using rule 7 (PackageStmt)


State 11

   20 FuncOpen: FUNC IDENT .

    $default  reduce using rule 20 (FuncOpen)


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    2 GlobalStatementList: GlobalStatementList GlobalStatement .

    $default  reduce using rule 2 (GlobalStatementList)


State 14

    4 GlobalStatement: PackageStmt NEWLINE .

    $default  reduce using rule 4 (GlobalStatement)


State 15

   10 FunctionDeclStmt: FuncOpen LPAREN . ParameterList RPAREN Type LBRACE $@1 StatementList $@2 RBRACE
   13                 | FuncOpen LPAREN . ParameterList RPAREN LBRACE $@3 StatementList $@4 RBRACE
   16                 | FuncOpen LPAREN . RPAREN Type LBRACE $@5 StatementList $@6 RBRACE
   19                 | FuncOpen LPAREN . RPAREN LBRACE $@7 StatementList $@8 RBRACE

    RPAREN  shift, and go to state 16
    IDENT   shift, and go to state 17

    ParameterList  go to state 18


State 16

   16 FunctionDeclStmt: FuncOpen LPAREN RPAREN . Type LBRACE $@5 StatementList $@6 RBRACE
   19                 | FuncOpen LPAREN RPAREN . LBRACE $@7 StatementList $@8 RBRACE

    INT     shift, and go to state 19
    FLOAT   shift, and go to state 20
    BOOL    shift, and go to state 21
    STRING  shift, and go to state 22
    LBRACE  shift, and go to state 23

    Type  go to state 24


State 17

   21 ParameterList: IDENT . Type
   22              | IDENT .

    INT     shift, and go to state 19
    FLOAT   shift, and go to state 20
    BOOL    shift, and go to state 21
    STRING  shift, and go to state 22

    $default  reduce using rule 22 (ParameterList)

    Type  go to state 25


State 18

   10 FunctionDeclStmt: FuncOpen LPAREN ParameterList . RPAREN Type LBRACE $@1 StatementList $@2 RBRACE
   13                 | FuncOpen LPAREN ParameterList . RPAREN LBRACE $@3 StatementList $@4 RBRACE
   23 ParameterList: ParameterList . COMMA IDENT Type
   24              | ParameterList . COMMA Literal

    COMMA   shift, and go to state 26
    RPAREN  shift, and go to state 27


State 19

   62 Type: INT .

    $default  reduce using rule 62 (Type)


State 20

   63 Type: FLOAT .

    $default  reduce using rule 63 (Type)


State 21

   65 Type: BOOL .

    $default  reduce using rule 65 (Type)


State 22

   64 Type: STRING .

    $default  reduce using rule 64 (Type)


State 23

   19 FunctionDeclStmt: FuncOpen LPAREN RPAREN LBRACE . $@7 StatementList $@8 RBRACE

    $default  reduce using rule 17 ($@7)

    $@7  go to state 28


State 24

   16 FunctionDeclStmt: FuncOpen LPAREN RPAREN Type . LBRACE $@5 StatementList $@6 RBRACE

    LBRACE  shift, and go to state 29


State 25

   21 ParameterList: IDENT Type .

    $default  reduce using rule 21 (ParameterList)


State 26

   23 ParameterList: ParameterList COMMA . IDENT Type
   24              | ParameterList COMMA . Literal

    INT_LIT     shift, and go to state 30
    FLOAT_LIT   shift, and go to state 31
    BOOL_LIT    shift, and go to state 32
    STRING_LIT  shift, and go to state 33
    IDENT       shift, and go to state 34

    Literal  go to state 35


State 27

   10 FunctionDeclStmt: FuncOpen LPAREN ParameterList RPAREN . Type LBRACE $@1 StatementList $@2 RBRACE
   13                 | FuncOpen LPAREN ParameterList RPAREN . LBRACE $@3 StatementList $@4 RBRACE

    INT     shift, and go to state 19
    FLOAT   shift, and go to state 20
    BOOL    shift, and go to state 21
    STRING  shift, and go to state 22
    LBRACE  shift, and go to state 36

    Type  go to state 37


State 28

   19 FunctionDeclStmt: FuncOpen LPAREN RPAREN LBRACE $@7 . StatementList $@8 RBRACE

    VAR         shift, and go to state 38
    NEWLINE     shift, and go to state 39
    INT         shift, and go to state 19
    FLOAT       shift, and go to state 20
    BOOL        shift, and go to state 21
    STRING      shift, and go to state 22
    IF          shift, and go to state 40
    FOR         shift, and go to state 41
    SWITCH      shift, and go to state 42
    CASE        shift, and go to state 43
    DEFAULT     shift, and go to state 44
    PRINT       shift, and go to state 45
    PRINTLN     shift, and go to state 46
    RETURN      shift, and go to state 47
    LPAREN      shift, and go to state 48
    LBRACE      shift, and go to state 49
    ADD         shift, and go to state 50
    SUB         shift, and go to state 51
    NOT         shift, and go to state 52
    INT_LIT     shift, and go to state 30
    FLOAT_LIT   shift, and go to state 31
    BOOL_LIT    shift, and go to state 32
    STRING_LIT  shift, and go to state 33
    IDENT       shift, and go to state 53

    ReturnStmt       go to state 54
    PrimaryExpr      go to state 55
    Expression       go to state 56
    Multiplication   go to state 57
    Addition         go to state 58
    Comparison       go to state 59
    Logicand         go to state 60
    Logicor          go to state 61
    UnaryExpr        go to state 62
    Operand          go to state 63
    Literal          go to state 64
    ConversionExpr   go to state 65
    Type             go to state 66
    Statement        go to state 67
    SimpleStmt       go to state 68
    DeclarationStmt  go to state 69
    AssignmentStmt   go to state 70
    ExpressionStmt   go to state 71
    IncDecStmt       go to state 72
    Block            go to state 73
    StatementList    go to state 74
    IfStmt           go to state 75
    ForStmt          go to state 76
    SwitchStmt       go to state 77
    CaseStmt         go to state 78
    PrintStmt        go to state 79


State 29

   16 FunctionDeclStmt: FuncOpen LPAREN RPAREN Type LBRACE . $@5 StatementList $@6 RBRACE

    $default  reduce using rule 14 ($@5)

    $@5  go to state 80


State 30

   57 Literal: INT_LIT .

    $default  reduce using rule 57 (Literal)


State 31

   58 Literal: FLOAT_LIT .

    $default  reduce using rule 58 (Literal)


State 32

   59 Literal: BOOL_LIT .

    $default  reduce using rule 59 (Literal)


State 33

   60 Literal: STRING_LIT .

    $default  reduce using rule 60 (Literal)


State 34

   23 ParameterList: ParameterList COMMA IDENT . Type

    INT     shift, and go to state 19
    FLOAT   shift, and go to state 20
    BOOL    shift, and go to state 21
    STRING  shift, and go to state 22

    Type  go to state 81


State 35

   24 ParameterList: ParameterList COMMA Literal .

    $default  reduce using rule 24 (ParameterList)


State 36

   13 FunctionDeclStmt: FuncOpen LPAREN ParameterList RPAREN LBRACE . $@3 StatementList $@4 RBRACE

    $default  reduce using rule 11 ($@3)

    $@3  go to state 82


State 37

   10 FunctionDeclStmt: FuncOpen LPAREN ParameterList RPAREN Type . LBRACE $@1 StatementList $@2 RBRACE

    LBRACE  shift, and go to state 83


State 38

   79 DeclarationStmt: VAR . IDENT Type
   80                | VAR . IDENT Type ASSIGN Expression

    IDENT  shift, and go to state 84


State 39

   75 Statement: NEWLINE .

    $default  reduce using rule 75 (Statement)


State 40

   95 IfStmt: IF . Condition Block ELSE IfStmt
   96       | IF . Condition Block ELSE Block
   97       | IF . Condition Block

    INT         shift, and go to state 19
    FLOAT       shift, and go to state 20
    BOOL        shift, and go to state 21
    STRING      shift, and go to state 22
    LPAREN      shift, and go to state 48
    ADD         shift, and go to state 50
    SUB         shift, and go to state 51
    NOT         shift, and go to state 52
    INT_LIT     shift, and go to state 30
    FLOAT_LIT   shift, and go to state 31
    BOOL_LIT    shift, and go to state 32
    STRING_LIT  shift, and go to state 33
    IDENT       shift, and go to state 53

    PrimaryExpr     go to state 55
    Expression      go to state 85
    Multiplication  go to state 57
    Addition        go to state 58
    Comparison      go to state 59
    Logicand        go to state 60
    Logicor         go to state 61
    UnaryExpr       go to state 62
    Operand         go to state 63
    Literal         go to state 64
    ConversionExpr  go to state 65
    Type            go to state 66
    Condition       go to state 86


State 41

   99 ForStmt: FOR . Condition Block
  100        | FOR . ForClause Block

    INT         shift, and go to state 19
    FLOAT       shift, and go to state 20
    BOOL        shift, and go to state 21
    STRING      shift, and go to state 22
    LPAREN      shift, and go to state 48
    ADD         shift, and go to state 50
    SUB         shift, and go to state 51
    NOT         shift, and go to state 52
    INT_LIT     shift, and go to state 30
    FLOAT_LIT   shift, and go to state 31
    BOOL_LIT    shift, and go to state 32
    STRING_LIT  shift, and go to state 33
    IDENT       shift, and go to state 53

    PrimaryExpr     go to state 55
    Expression      go to state 87
    Multiplication  go to state 57
    Addition        go to state 58
    Comparison      go to state 59
    Logicand        go to state 60
    Logicor         go to state 61
    UnaryExpr       go to state 62
    Operand         go to state 63
    Literal         go to state 64
    ConversionExpr  go to state 65
    Type            go to state 66
    SimpleStmt      go to state 88
    AssignmentStmt  go to state 70
    ExpressionStmt  go to state 71
    IncDecStmt      go to state 72
    Condition       go to state 89
    ForClause       go to state 90
    InitStmt        go to state 91


State 42

  104 SwitchStmt: SWITCH . Expression Block

    INT         shift, and go to state 19
    FLOAT       shift, and go to state 20
    BOOL        shift, and go to state 21
    STRING      shift, and go to state 22
    LPAREN      shift, and go to state 48
    ADD         shift, and go to state 50
    SUB         shift, and go to state 51
    NOT         shift, and go to state 52
    INT_LIT     shift, and go to state 30
    FLOAT_LIT   shift, and go to state 31
    BOOL_LIT    shift, and go to state 32
    STRING_LIT  shift, and go to state 33
    IDENT       shift, and go to state 53

    PrimaryExpr     go to state 55
    Expression      go to state 92
    Multiplication  go to state 57
    Addition        go to state 58
    Comparison      go to state 59
    Logicand        go to state 60
    Logicor         go to state 61
    UnaryExpr       go to state 62
    Operand         go to state 63
    Literal         go to state 64
    ConversionExpr  go to state 65
    Type            go to state 66


State 43

  106 CaseStmt: CASE . INT_LIT $@11 COLON Block

    INT_LIT  shift, and go to state 93


State 44

  107 CaseStmt: DEFAULT . COLON Block

    COLON  shift, and go to state 94


State 45

  108 PrintStmt: PRINT . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 95


State 46

  109 PrintStmt: PRINTLN . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 96


State 47

   25 ReturnStmt: RETURN . Expression
   26           | RETURN .

    INT         shift, and go to state 19
    FLOAT       shift, and go to state 20
    BOOL        shift, and go to state 21
    STRING      shift, and go to state 22
    LPAREN      shift, and go to state 48
    ADD         shift, and go to state 50
    SUB         shift, and go to state 51
    NOT         shift, and go to state 52
    INT_LIT     shift, and go to state 30
    FLOAT_LIT   shift, and go to state 31
    BOOL_LIT    shift, and go to state 32
    STRING_LIT  shift, and go to state 33
    IDENT       shift, and go to state 53

    $default  reduce using rule 26 (ReturnStmt)

    PrimaryExpr     go to state 55
    Expression      go to state 97
    Multiplication  go to state 57
    Addition        go to state 58
    Comparison      go to state 59
    Logicand        go to state 60
    Logicor         go to state 61
    UnaryExpr       go to state 62
    Operand         go to state 63
    Literal         go to state 64
    ConversionExpr  go to state 65
    Type            go to state 66


State 48

   54 Operand: LPAREN . Expression RPAREN

    INT         shift, and go to state 19
    FLOAT       shift, and go to state 20
    BOOL        shift, and go to state 21
    STRING      shift, and go to state 22
    LPAREN      shift, and go to state 48
    ADD         shift, and go to state 50
    SUB         shift, and go to state 51
    NOT         shift, and go to state 52
    INT_LIT     shift, and go to state 30
    FLOAT_LIT   shift, and go to state 31
    BOOL_LIT    shift, and go to state 32
    STRING_LIT  shift, and go to state 33
    IDENT       shift, and go to state 53

    PrimaryExpr     go to state 55
    Expression      go to state 98
    Multiplication  go to state 57
    Addition        go to state 58
    Comparison      go to state 59
    Logicand        go to state 60
    Logicor         go to state 61
    UnaryExpr       go to state 62
    Operand         go to state 63
    Literal         go to state 64
    ConversionExpr  go to state 65
    Type            go to state 66


State 49

   92 Block: LBRACE . $@9 StatementList $@10 RBRACE

    $default  reduce using rule 90 ($@9)

    $@9  go to state 99


State 50

   49 UnaryExpr: ADD . UnaryExpr

    INT         shift, and go to state 19
    FLOAT       shift, and go to state 20
    BOOL        shift, and go to state 21
    STRING      shift, and go to state 22
    LPAREN      shift, and go to state 48
    ADD         shift, and go to state 50
    SUB         shift, and go to state 51
    NOT         shift, and go to state 52
    INT_LIT     shift, and go to state 30
    FLOAT_LIT   shift, and go to state 31
    BOOL_LIT    shift, and go to state 32
    STRING_LIT  shift, and go to state 33
    IDENT       shift, and go to state 53

    PrimaryExpr     go to state 55
    UnaryExpr       go to state 100
    Operand         go to state 63
    Literal         go to state 64
    ConversionExpr  go to state 65
    Type            go to state 66


State 51

   50 UnaryExpr: SUB . UnaryExpr

    INT         shift, and go to state 19
    FLOAT       shift, and go to state 20
    BOOL        shift, and go to state 21
    STRING      shift, and go to state 22
    LPAREN      shift, and go to state 48
    ADD         shift, and go to state 50
    SUB         shift, and go to state 51
    NOT         shift, and go to state 52
    INT_LIT     shift, and go to state 30
    FLOAT_LIT   shift, and go to state 31
    BOOL_LIT    shift, and go to state 32
    STRING_LIT  shift, and go to state 33
    IDENT       shift, and go to state 53

    PrimaryExpr     go to state 55
    UnaryExpr       go to state 101
    Operand         go to state 63
    Literal         go to state 64
    ConversionExpr  go to state 65
    Type            go to state 66


State 52

   51 UnaryExpr: NOT . UnaryExpr

    INT         shift, and go to state 19
    FLOAT       shift, and go to state 20
    BOOL        shift, and go to state 21
    STRING      shift, and go to state 22
    LPAREN      shift, and go to state 48
    ADD         shift, and go to state 50
    SUB         shift, and go to state 51
    NOT         shift, and go to state 52
    INT_LIT     shift, and go to state 30
    FLOAT_LIT   shift, and go to state 31
    BOOL_LIT    shift, and go to state 32
    STRING_LIT  shift, and go to state 33
    IDENT       shift, and go to state 53

    PrimaryExpr     go to state 55
    UnaryExpr       go to state 102
    Operand         go to state 63
    Literal         go to state 64
    ConversionExpr  go to state 65
    Type            go to state 66


State 53

   53 Operand: IDENT .
   55        | IDENT . LPAREN RPAREN
   56        | IDENT . LPAREN ParameterList RPAREN

    LPAREN  shift, and go to state 103

    $default  reduce using rule 53 (Operand)


State 54

   74 Statement: ReturnStmt . NEWLINE

    NEWLINE  shift, and go to state 104


State 55

   48 UnaryExpr: PrimaryExpr .

    $default  reduce using rule 48 (UnaryExpr)


State 56

   31 Multiplication: Expression . MUL Expression
   32               | Expression . QUO Expression
   33               | Expression . REM Expression
   35 Addition: Expression . ADD Expression
   36         | Expression . SUB Expression
   38 Comparison: Expression . EQL Expression
   39           | Expression . NEQ Expression
   40           | Expression . LSS Expression
   41           | Expression . LEQ Expression
   42           | Expression . GTR Expression
   43           | Expression . GEQ Expression
   45 Logicand: Expression . LAND Expression
   47 Logicor: Expression . LOR Expression
   81 AssignmentStmt: Expression . ASSIGN Expression
   82               | Expression . ADD_ASSIGN Expression
   83               | Expression . SUB_ASSIGN Expression
   84               | Expression . MUL_ASSIGN Expression
   85               | Expression . QUO_ASSIGN Expression
   86               | Expression . REM_ASSIGN Expression
   87 ExpressionStmt: Expression .
   88 IncDecStmt: Expression . INC
   89           | Expression . DEC

    ASSIGN      shift, and go to state 105
    ADD_ASSIGN  shift, and go to state 106
    SUB_ASSIGN  shift, and go to state 107
    MUL_ASSIGN  shift, and go to state 108
    QUO_ASSIGN  shift, and go to state 109
    REM_ASSIGN  shift, and go to state 110
    LOR         shift, and go to state 111
    LAND        shift, and go to state 112
    GTR         shift, and go to state 113
    LSS         shift, and go to state 114
    GEQ         shift, and go to state 115
    LEQ         shift, and go to state 116
    EQL         shift, and go to state 117
    NEQ         shift, and go to state 118
    ADD         shift, and go to state 119
    SUB         shift, and go to state 120
    MUL         shift, and go to state 121
    QUO         shift, and go to state 122
    REM         shift, and go to state 123
    INC         shift, and go to state 124
    DEC         shift, and go to state 125

    $default  reduce using rule 87 (ExpressionStmt)


State 57

   30 Expression: Multiplication .

    $default  reduce using rule 30 (Expression)


State 58

   34 Multiplication: Addition .

    $default  reduce using rule 34 (Multiplication)


State 59

   37 Addition: Comparison .

    $default  reduce using rule 37 (Addition)


State 60

   44 Comparison: Logicand .

    $default  reduce using rule 44 (Comparison)


State 61

   46 Logicand: Logicor .

    $default  reduce using rule 46 (Logicand)


State 62

   29 Expression: UnaryExpr .

    $default  reduce using rule 29 (Expression)


State 63

   27 PrimaryExpr: Operand .

    $default  reduce using rule 27 (PrimaryExpr)


State 64

   52 Operand: Literal .

    $default  reduce using rule 52 (Operand)


State 65

   28 PrimaryExpr: ConversionExpr .

    $default  reduce using rule 28 (PrimaryExpr)


State 66

   61 ConversionExpr: Type . LPAREN Expression RPAREN

    LPAREN  shift, and go to state 126


State 67

   93 StatementList: Statement . StatementList
   94              | Statement .

    VAR         shift, and go to state 38
    NEWLINE     shift, and go to state 39
    INT         shift, and go to state 19
    FLOAT       shift, and go to state 20
    BOOL        shift, and go to state 21
    STRING      shift, and go to state 22
    IF          shift, and go to state 40
    FOR         shift, and go to state 41
    SWITCH      shift, and go to state 42
    CASE        shift, and go to state 43
    DEFAULT     shift, and go to state 44
    PRINT       shift, and go to state 45
    PRINTLN     shift, and go to state 46
    RETURN      shift, and go to state 47
    LPAREN      shift, and go to state 48
    LBRACE      shift, and go to state 49
    ADD         shift, and go to state 50
    SUB         shift, and go to state 51
    NOT         shift, and go to state 52
    INT_LIT     shift, and go to state 30
    FLOAT_LIT   shift, and go to state 31
    BOOL_LIT    shift, and go to state 32
    STRING_LIT  shift, and go to state 33
    IDENT       shift, and go to state 53

    $default  reduce using rule 94 (StatementList)

    ReturnStmt       go to state 54
    PrimaryExpr      go to state 55
    Expression       go to state 56
    Multiplication   go to state 57
    Addition         go to state 58
    Comparison       go to state 59
    Logicand         go to state 60
    Logicor          go to state 61
    UnaryExpr        go to state 62
    Operand          go to state 63
    Literal          go to state 64
    ConversionExpr   go to state 65
    Type             go to state 66
    Statement        go to state 67
    SimpleStmt       go to state 68
    DeclarationStmt  go to state 69
    AssignmentStmt   go to state 70
    ExpressionStmt   go to state 71
    IncDecStmt       go to state 72
    Block            go to state 73
    StatementList    go to state 127
    IfStmt           go to state 75
    ForStmt          go to state 76
    SwitchStmt       go to state 77
    CaseStmt         go to state 78
    PrintStmt        go to state 79


State 68

   67 Statement: SimpleStmt . NEWLINE

    NEWLINE  shift, and go to state 128


State 69

   66 Statement: DeclarationStmt . NEWLINE

    NEWLINE  shift, and go to state 129


State 70

   76 SimpleStmt: AssignmentStmt .

    $default  reduce using rule 76 (SimpleStmt)


State 71

   77 SimpleStmt: ExpressionStmt .

    $default  reduce using rule 77 (SimpleStmt)


State 72

   78 SimpleStmt: IncDecStmt .

    $default  reduce using rule 78 (SimpleStmt)


State 73

   68 Statement: Block .

    $default  reduce using rule 68 (Statement)


State 74

   19 FunctionDeclStmt: FuncOpen LPAREN RPAREN LBRACE $@7 StatementList . $@8 RBRACE

    $default  reduce using rule 18 ($@8)

    $@8  go to state 130


State 75

   69 Statement: IfStmt .

    $default  reduce using rule 69 (Statement)


State 76

   70 Statement: ForStmt .

    $default  reduce using rule 70 (Statement)


State 77

   71 Statement: SwitchStmt .

    $default  reduce using rule 71 (Statement)


State 78

   72 Statement: CaseStmt .

    $default  reduce using rule 72 (Statement)


State 79

   73 Statement: PrintStmt . NEWLINE

    NEWLINE  shift, and go to state 131


State 80

   16 FunctionDeclStmt: FuncOpen LPAREN RPAREN Type LBRACE $@5 . StatementList $@6 RBRACE

    VAR         shift, and go to state 38
    NEWLINE     shift, and go to state 39
    INT         shift, and go to state 19
    FLOAT       shift, and go to state 20
    BOOL        shift, and go to state 21
    STRING      shift, and go to state 22
    IF          shift, and go to state 40
    FOR         shift, and go to state 41
    SWITCH      shift, and go to state 42
    CASE        shift, and go to state 43
    DEFAULT     shift, and go to state 44
    PRINT       shift, and go to state 45
    PRINTLN     shift, and go to state 46
    RETURN      shift, and go to state 47
    LPAREN      shift, and go to state 48
    LBRACE      shift, and go to state 49
    ADD         shift, and go to state 50
    SUB         shift, and go to state 51
    NOT         shift, and go to state 52
    INT_LIT     shift, and go to state 30
    FLOAT_LIT   shift, and go to state 31
    BOOL_LIT    shift, and go to state 32
    STRING_LIT  shift, and go to state 33
    IDENT       shift, and go to state 53
